# ZwiftGuard

./: .gitignore  COPYRIGHT  Contributor Agreement  LICENSE  Proprietary License  README.md  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
tests/: test_engine.py
zwiftguard/: __init__.py  __main__.py  ble_monitor.py  cli.py  config.py  dashboard.py  engine.py  geo.py  models.py  net_monitor.py  power_monitor.py  proc_monitor.py  zwift_local.py  zwift_log.py
