[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zwiftguard"
version = "0.6.1"
description = "Passive equipment-integrity monitor for Zwift sessions: fingerprints trainers/HRMs and flags spoofing or man-in-the-middle bridges"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "Proprietary License" }
authors = [{ name = "Jason Drummond" }]
keywords = ["zwift", "anti-cheat", "ble", "ant+", "integrity", "smart-trainer"]
classifiers = [
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "bleak>=3.0",
    "psutil>=7.0",
]

[project.urls]
Repository = "https://github.com/jdrumm1209/ZwiftGuard"

[project.scripts]
zwiftguard = "zwiftguard.cli:main"

[tool.setuptools.packages.find]
include = ["zwiftguard*"]
